Project 2 Inferno/Main/main/default/objects/Account/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Master Card</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Default, Visa, Master Card, Discover, American Express</fullName>
                <isActive>false</isActive>
                <label>Default, Visa, Master Card, Discover, American Express</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>