Project 2 Inferno/Main/main/default/objects/Account/fields/Name_On_Card__c.field-meta.xml
<CustomField>
    <fullName>Name_On_Card__c</fullName>
    <label>Name On Card</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>