Project 2 Inferno/Main/main/default/objects/Account/fields/Other_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Other_Memberships__c</fullName>
    <label>Other Memberships</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Grubhub</fullName>
            </value>
            <value>
                <fullName>Uber</fullName>
            </value>
            <value>
                <fullName>Doordash</fullName>
            </value>
            <value>
                <fullName>Dominos Rewards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>